--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     
     <title>Homepage Heng Fan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./page_files/global.css">
-    <link rel="stylesheet" type="text/css" href="./page_files/navigation.css">
-	<link rel="stylesheet" type="text/css" href="./page_files/home.css">
+    <link rel="stylesheet" type="text/css" href="./stylefiles/global.css">
+    <link rel="stylesheet" type="text/css" href="./stylefiles/navigation.css">
+	<link rel="stylesheet" type="text/css" href="./stylefiles/home.css">
 	<style>a{ TEXT-DECORATION:none}a:hover{TEXT-DECORATION:underline }</style>
 	<!-- <style>a{ TEXT-DECORATION:none }</style>-->   <!-- change style for hyperlink -->
 </head>
