--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="navi central_body">
-    <a class="navi" href="./heng.html">Home</a>
+    <a class="navi" href="./index.html">Home</a>
     <a class="navi navi_active" href="./publications.html">Full Publications</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
