--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@ src="personal/at.gif">cs.stonybrook.edu
     
 	<HR>
 	
+	<font size="4" color="#034f84"><b>Call for participation</b></font>
+    <ul style="margin-top:5px;">
+		<li>ECCV 2020 <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">International Workshop on Computer Vision for UAVs</font></a>.</li>
+    </ul>
+	
+	<HR>
+	
 	<font size="4" color="#034f84"><b>News</b></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2020-06:</font> We are organizing <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">VisDrone 2020</font></a>, in conjunction ECCV 2020. <a href="http://uavisionvisdrone.com/#/index/submission"><font color="#0099ff">Submissions</font></a> are welcome.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2020-06:</font> I am co-organizing <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">VisDrone 2020</font></a>, in conjunction ECCV 2020. <a href="http://uavisionvisdrone.com/#/index/submission"><font color="#0099ff">Submissions</font></a> are welcome.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-01:</font> <font>After four years at Temple University, I moved to <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a> to continue my study.</font></li>
     </ul>
 	
