--- a/service.html
+++ b/service.html
@@ -116,7 +116,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				International Workshop on Computer Vision for UAVs in ECCV 2020</font>
+				Co-organizer, International Workshop on Computer Vision for UAVs in ECCV 2020
 				<br>
 			</p>
 		</li>
