--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
     <p style="margin-top:5px;"><font>I am a PhD student in <a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
-	         advised by Prof. <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Haibin Ling</font></font></a>. Prior to this, was a PhD student at Temple University. I spent two and a half years as a master student (course completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I worked closely 
-			 with Prof. <a href="http://coi.hzau.edu.cn/info/1123/3709.htm" target="_blank"><font color="#0099ff">Jinhai Xiang</font></a>. I received my B.S. degree from <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a> in 2013.</font></p>
+	         advised by Prof. <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Haibin Ling</font></font></a>. Prior to this, was a PhD student at Temple University. I spent two and a half years as a master student (course completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
     
 	<HR>
 	
