add and revise files

--- a/service.html
+++ b/service.html
@@ -17,6 +17,7 @@
     <a class="navi" href="./publications.html">Full Publications</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi navi_active" href="./service.html">Professional Activities</a>
+	<a class="navi" href="./student.html">Student Supervision</a>
 </div>
 
 <div class="navi_bar"></div>
