--- a/student.html
+++ b/student.html
@@ -15,40 +15,27 @@
 <div class="navi central_body">
     <a class="navi" href="./index.html">Home</a>
     <a class="navi" href="./publications.html">Full Publications</a>
-    <a class="navi navi_active" href="./teaching.html">Teaching</a>
+    <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
-	<a class="navi" href="./student.html">Student Supervision</a>
+	<a class="navi navi_active" href="./student.html">Student Supervision</a>
 </div>
 
 <div class="navi_bar"></div>
 
 <div class="central_body">
 
-	<font size="4" color="#034f84"><b>Department of Computer and Information Sciences, Temple University</b></font>
+	<font size="4" color="#034f84"><b>Master Student, Stony Brook University</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
 		
 		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CIS 2107, Computer System and Low-Level Programming, Fall 2019.
-				<br>
-			</p>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><a href="https://harshit13.github.io/" target="_blank"><font color="black"><b>Harshit</b></font></a>, visual object tracking (2020-present)</p>
 		</li>
-		
 		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CIS 2168, Data Structures, Spring 2019.
-				<br>
-			</p>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><b>Halady Miththanthaya</b>, visual object tracking (2020-present)</p>
 		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CIS 2168, Data Structures, Fall 2018.
-				<br>
-			</p>
-		</li>
+	</ul>
 		
     </ul>
 
