add and revise files

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <div class="photo_intro">
         <img src="./personal/heng.jpg" alt="Heng Fan" class="photo">
         <div class="intro">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
             <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PhD student
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PhD student
             <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room 138, New Computer Science Bldg, Stony Brook, NY 11794
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room 138, New Computer Science Bldg, Stony Brook, NY 11794
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan<img height="13" width="13"
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan<img height="13" width="13"
 src="personal/at.gif">cs.stonybrook.edu    
 			<br><br>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/cv-hengfan.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/cv-hengfan.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/" target="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/"><font color="#0099ff">LinkedIn</font></a>]
 			[<a href="https://www.researchgate.net/profile/Heng_Fan2" target="https://www.researchgate.net/profile/Heng_Fan2"><font color="#0099ff">ResearchGate</font></a>]
@@ -240,7 +240,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font>IEEE Transactions on Circuits and Systems for Video and Technology (<b>T-CSVT</b>), 27(5): 1018-1030, 2017.</font>
 				<br>
-				<font><a href="publication\TCSVT-17.pdf" target="_blank"><font color="#0099ff">paper</font></a></font> &nbsp; <a href="./project/MJDL/MJDL.htm" target="_blank"><font color="#0099ff">project</font></a>
+				<font><a href="publication\TCSVT-17.pdf" target="_blank"><font color="#0099ff">paper</font></a></font> &nbsp; <a href=".\project\MJDL\MJDL.htm" target="_blank"><font color="#0099ff">project</font></a>
 				<br>
 			</p>
 		</li>
