--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@ src="personal/at.gif">cs.stonybrook.edu
     
 	<HR>
 	
+	<!--
 	<font size="4" color="#034f84"><b>Call for participation</b></font>
     <ul style="margin-top:5px;">
 		<li>ECCV 2020 <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">International Workshop on Computer Vision for UAVs</font></a>.</li>
     </ul>
 	
 	<HR>
+	-->
 	
 	<font size="4" color="#034f84"><b>News</b></font>
     <ul style="margin-top:5px;">
@@ -75,6 +77,19 @@ src="personal/at.gif">cs.stonybrook.edu
 	<br>
 	
     <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
+				<br>
+				<font color="#000000">Jiaxiang Ren, <b>Heng Fan</b>, Jie Yang, and Haibin Ling</font>
+				<br>
+				<font>IEEE Engineering in Medicine and Biology Society  (<b>EMBC</b>), 2020.</font>
+				<br>
+				<a href="publication\EMBC-20.pdf" target="_blank"><font color="#0099ff">paper</font></a>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
