--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,19 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Semantic-Aware Label Placement for Augmented Reality in Street View</font>
+				<br>
+				<font color="#000000" >Jianqing Jia, Semir Elezovikj, <b>Heng Fan</b>, Shuojin Yang, Jing Liu, Wei Guo, Chiu C. Tan, and Haibin Ling</font>
+				<br>
+				<font>The Visual Computer (<b>TVC</b>), 2020. (in press)</font>
+				<br>
+				<font><a href="https://arxiv.org/abs/1912.07105" target="_blank"><font color="#0099ff">paper</font></a></font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Robust and Efficient Graph Correspondence Transfer for Person Re-identification</font>
 				<br>
 				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, Shuang Wu, and Haibin Ling</font>
@@ -138,6 +151,19 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
+				<br>
+				<font color="#000000">Jiaxiang Ren, <b>Heng Fan</b>, Jie Yang, and Haibin Ling</font>
+				<br>
+				<font>IEEE Engineering in Medicine and Biology Society  (<b>EMBC</b>), 2020.</font>
+				<br>
+				<a href="publication\EMBC-20.pdf" target="_blank"><font color="#0099ff">paper</font></a>
+				<br>
+			</p>
+		</li>
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Clustered Object Detection in Aerial Images</font>
