--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
     <p style="margin-top:5px;"><font>I am a PhD student in <a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
-	         advised by Prof. <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Haibin Ling</font></font></a>. Prior to this, was a PhD student at Temple University. I spent two and a half years as a master student (course completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
+	         advised by Prof. <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Haibin Ling</font></font></a>. Prior to this, was a PhD student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
     
 	<HR>
 	
@@ -65,6 +65,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	
 	<font size="4" color="#034f84"><b>News</b></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2020-08:</font> A paper on visual tracking accepted to <a href="http://wacv2021.thecvf.com/"><font color="#0099ff">WACV 2021</font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-06:</font> I am co-organizing <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">VisDrone 2020</font></a>, in conjunction ECCV 2020. <a href="http://uavisionvisdrone.com/#/index/submission"><font color="#0099ff">Submissions</font></a> are welcome.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-01:</font> <font>After four years at Temple University, I moved to <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a> to continue my study.</font></li>
     </ul>
