--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	
 	<font size="4" color="#034f84"><b>News</b></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2020-08:</font> A paper on visual tracking accepted to <a href="http://wacv2021.thecvf.com/"><font color="#0099ff">WACV 2021</font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2020-08:</font> A paper on visual tracking accepted to <a href="http://wacv2021.thecvf.com/" target="_blank"><font color="#0099ff">WACV 2021</font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-06:</font> I am co-organizing <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">VisDrone 2020</font></a>, in conjunction ECCV 2020. <a href="http://uavisionvisdrone.com/#/index/submission"><font color="#0099ff">Submissions</font></a> are welcome.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-01:</font> <font>After four years at Temple University, I moved to <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a> to continue my study.</font></li>
     </ul>
