--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan<img height="13" width="13"
 src="personal/at.gif">cs.stonybrook.edu    
 			<br><br>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/cv-hengfan.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Heng-Fan-cv.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/" target="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/"><font color="#0099ff">LinkedIn</font></a>]
 			[<a href="https://www.researchgate.net/profile/Heng_Fan2" target="https://www.researchgate.net/profile/Heng_Fan2"><font color="#0099ff">ResearchGate</font></a>]
@@ -78,6 +78,17 @@ src="personal/at.gif">cs.stonybrook.edu
 	<br>
 	
     <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">MART: Motion-Aware Recurrent Neural Network for Robust Visual Tracking</font>
+				<br>
+				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
+				<br>
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -163,7 +174,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" ><b>Heng Fan</b>, Peng Chu, Longin Jan Latecki, and Haibin Ling</font>
 				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>oral presentation with early accept</b></font>)
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\WACV-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -176,7 +187,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" >Peng Chu, <b>Heng Fan</b>, Chiu C. Tan, and Haibin Ling</font>
 				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>oral presentation with early accept</b></font>)
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\WACV-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -202,7 +213,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Shibao Zheng, Hang Su, Xinzhe Li, Shuang Wu, and Haibin Ling</font>
 				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> (<font color="#CC0000"><b>oral presentation</b></font>)
+				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\AAAI-18.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
@@ -228,7 +239,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
 				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> (<font color="#CC0000"><b>oral presentation</b></font>)
+				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\AAAI-17.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -241,7 +252,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
 				<br>
-				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> (<font color="#CC0000"><b>oral presentation</b></font>)
+				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\CVPRW-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://www.dabi.temple.edu/~hbling/code/SANet/SANet.html" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
