--- a/publications.html
+++ b/publications.html
@@ -151,6 +151,18 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">MART: Motion-Aware Recurrent Neural Network for Robust Visual Tracking</font>
+				<br>
+				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
+				<br>
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
+				<br>
+			</p>
+		</li>
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
@@ -209,7 +221,7 @@
 				<br>
 				<font color="#000000" ><b>Heng Fan</b>, Peng Chu, Longin Jan Latecki, and Haibin Ling</font>
 				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>oral presentation with early accept</b></font>)
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\WACV-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -222,7 +234,7 @@
 				<br>
 				<font color="#000000" >Peng Chu, <b>Heng Fan</b>, Chiu C. Tan, and Haibin Ling</font>
 				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>oral presentation with early accept</b></font>)
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\WACV-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -261,7 +273,7 @@
 				<br>
 				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Shibao Zheng, Hang Su, Xinzhe Li, Shuang Wu, and Haibin Ling</font>
 				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> (<font color="#CC0000"><b>oral presentation</b></font>)
+				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\AAAI-18.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
@@ -287,7 +299,7 @@
 				<br>
 				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
 				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> (<font color="#CC0000"><b>oral presentation</b></font>)
+				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\AAAI-17.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -300,7 +312,7 @@
 				<br>
 				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
 				<br>
-				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> (<font color="#CC0000"><b>oral presentation</b></font>)
+				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
 				<br>
 				<a href="publication\CVPRW-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://www.dabi.temple.edu/~hbling/code/SANet/SANet.html" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
