--- a/service.html
+++ b/service.html
@@ -87,6 +87,13 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Knowledge-Based Systems
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				Pattern Recognition (<font style="font-weight:bold">PR</font>)
 				<br>
 			</p>
