--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
 				<br>
 				<font>Neurocomputing, 407: 454-464, 2020.</font>
 				<br>
-				<font><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231220307906#!" target="_blank"><font color="#0099ff">paper</font></a>
+				<font><a href="publication\Neurocomputing-20.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
 			</p>
 		</li>
