--- a/service.html
+++ b/service.html
@@ -154,7 +154,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				AAAI Conference on Artificial Intelligence (<font style="font-weight:bold">AAAI</font>)</font>, <font size="3">2020</font>
+				AAAI Conference on Artificial Intelligence (<font style="font-weight:bold">AAAI</font>)</font>, <font size="3">2020, 2021</font>
 				<br>
 			</p>
 		</li>
