--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
 				<br>
 				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 28(8): 4130-4144, 2019.</font>
 				<br>
-				<font><a href="publication\TIP-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://www.dabi.temple.edu/~hbling/code/PTAV/ptav.htm" target="_blank"><font color="#0099ff">code</font></a></font>
+				<font><a href="publication\TIP-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://www3.cs.stonybrook.edu/~hling/code/PTAV/ptav.htm" target="_blank"><font color="#0099ff">code</font></a></font>
 				<br>
 			</p>
 		</li>
@@ -288,7 +288,7 @@
 				<br>
 				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2017.</font>
 				<br>
-				<a href="publication\ICCV-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="publication\ICCV17-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="publication\ICCV17-slide.pdf" target="_blank"><font color="#0099ff">slide</font></a> &nbsp; <a href="http://www.dabi.temple.edu/~hbling/code/PTAV/ptav.htm" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="publication\ICCV-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="publication\ICCV17-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="publication\ICCV17-slide.pdf" target="_blank"><font color="#0099ff">slide</font></a> &nbsp; <a href="https://www3.cs.stonybrook.edu/~hling/code/PTAV/ptav.htm" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
