--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019.</font>
 				<br>
-				<a href="publication\CVPR-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://cis.temple.edu/lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
+				<a href="publication\CVPR-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
 				<br>
 			</p>
 		</li>
