--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@ src="personal/at.gif">cs.stonybrook.edu
 	<br>
 	
     <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
+				<br>
+				<font color="#000000" ><b>Heng Fan</b>, Hexin Bai, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
+				<br>
+				<font>International Journal of Computer Vision (<b>IJCV</b>), 2021. (in press)</font>
+				<br>
+				<a href="https://arxiv.org/abs/2009.03465" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
+				<br>
+			</p>
+		</li>
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
