--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Hexin Bai, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
+				<font color="#000000" ><b>Heng Fan*</b>, Hexin Bai*, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
 				<br>
 				<font>International Journal of Computer Vision (<b>IJCV</b>), 2021. (in press)</font>
 				<br>
