--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 				<br>
 				<font>International Journal of Computer Vision (<b>IJCV</b>), 2021. (in press)</font>
 				<br>
-				<a href="https://arxiv.org/abs/2009.03465" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
+				<a href="publication\IJCV-21.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
 				<br>
 			</p>
 		</li>
