--- a/student.html
+++ b/student.html
@@ -35,6 +35,9 @@
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><b>Halady Miththanthaya</b>, visual object tracking (2020-present)</p>
 		</li>
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><b>Siranjiv Ramana Rajan</b>, visual object tracking (2020-present)</p>
+		</li>
 	</ul>
 		
     </ul>
