--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="central_body">
 
     <div class="photo_intro">
-        <img src="./personal/heng.jpg" alt="Heng Fan" class="photo">
+        <img src="./personal/heng.png" alt="Heng Fan" class="photo">
         <div class="intro">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
             <br><br>
