--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	
 	<font size="4" color="#034f84"><b>News</b></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2020-11:</font> A paper on attribute editing accepted to Neural Networks.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-09:</font> A paper on tracking accepted to International Journal of Computer Vision.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-09:</font> A new challenging subset was released in LaSOT for one-shot evaluation, <a href="https://arxiv.org/abs/2009.03465" target="_blank"><font color="#0099ff">paper</font></a> and <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">project</font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-08:</font> A paper on visual tracking accepted to <a href="http://wacv2021.thecvf.com/" target="_blank"><font color="#0099ff">WACV 2021</font></a>.</li>
