--- a/index.html
+++ b/index.html
@@ -85,11 +85,33 @@ src="personal/at.gif">cs.stonybrook.edu
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">TracKlinic: Diagnosis of Challenge Factors in Visual Tracking</font>
+				<br>
+				<font color="#000000"><b>Heng Fan</b>, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan and Haibin Ling</font>
+				<br>
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">MART: Motion-Aware Recurrent Neural Network for Robust Visual Tracking</font>
 				<br>
 				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">ClsGAN: Selective Attribute Editing Based On Classification Adversarial Network</font>
+				<br>
+				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
+				<br>
+				<font>Neural Networks (<b>NN</b>), 2020. (accepted)</font>
 				<br>
 			</p>
 		</li>
