--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,17 @@
 	<br>
 	
     <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">ClsGAN: Selective Attribute Editing Based On Classification Adversarial Network</font>
+				<br>
+				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
+				<br>
+				<font>Neural Networks (<b>NN</b>), 2020. (accepted)</font>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -164,6 +175,17 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">TracKlinic: Diagnosis of Challenge Factors in Visual Tracking</font>
+				<br>
+				<font color="#000000"><b>Heng Fan</b>, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan and Haibin Ling</font>
+				<br>
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
