--- a/publications.html
+++ b/publications.html
@@ -126,7 +126,7 @@
 				<br>
 				<font>IEEE Transactions on Circuits and Systems for Video and Technology (<b>T-CSVT</b>), 27(5): 1018-1030, 2017.</font>
 				<br>
-				<font><a href="publication\TCSVT-17.pdf" target="_blank"><font color="#0099ff">paper</font></a></font> &nbsp; <a href=".\project\MJDL\MJDL.htm" target="_blank"><font color="#0099ff">project</font></a>
+				<font><a href="publication\TCSVT-17.pdf" target="_blank"><font color="#0099ff">paper</font></a></font> &nbsp; <a href=".\projects\MJDL\MJDL.htm" target="_blank"><font color="#0099ff">project</font></a>
 				<br>
 			</p>
 		</li>
