--- a/projects/TOTB/index.htm
+++ b/projects/TOTB/index.htm
@@ -3,6 +3,6 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Transparent Object Tracking Benchmark</title></head>
 
-Coming soon ...
+Project of Transparent Object Tracking Benchmark (TOTB), coming soon ...
 
 </body></html>
