--- a/service.html
+++ b/service.html
@@ -17,12 +17,80 @@
     <a class="navi" href="./publications.html">Full Publications</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi navi_active" href="./service.html">Professional Activities</a>
-	<a class="navi" href="./student.html">Student Supervision</a>
+	<!--<a class="navi" href="./student.html">Student Supervision</a>-->
 </div>
 
 <div class="navi_bar"></div>
 
 <div class="central_body">
+	
+	
+	<font size="4" color="#034f84"><b>Conference Organization</b></font>
+	<br>
+	
+    <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Co-organizer, International Workshop on Computer Vision for UAVs in ECCV 2020
+				<br>
+			</p>
+		</li>
+		
+    </ul>
+	
+	<HR>
+	
+	<font size="4" color="#034f84"><b>Conference Program Committee / Reviewer for</b></font>
+	<br>
+	
+    <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>)</font>, <font size="3">2021</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				European Conference on Computer Vision (<font style="font-weight:bold">ECCV</font>)</font>, <font size="3">2020</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				AAAI Conference on Artificial Intelligence (<font style="font-weight:bold">AAAI</font>)</font>, <font size="3">2020, 2021</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				ICCV 2019 Workshop on Vision Meets Drone (<font style="font-weight:bold">VisDrone2019</font>)</font>, <font size="3">2019</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				IEEE International Conference on Computer Vision (<font style="font-weight:bold">ICCV</font>)</font>, <font size="3">2019</font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				IEEE Conference on Computer Vision and Pattern Recognition (<font style="font-weight:bold">CVPR</font>)</font>, <font size="3">2019 (<font style="font-weight:bold" color="#034f84">Outstanding Reviewer</font>), 2020, 2021</font>
+				<br>
+			</p>
+		</li>
+		
+    </ul>
+	
+	<HR>
 	
 	<font size="4" color="#034f84"><b>Journal Reviewer for</b></font>
 	<br>
@@ -115,72 +183,6 @@
 		
     </ul>
 	
-	<HR>
-	
-	<font size="4" color="#034f84"><b>Conference Organization</b></font>
-	<br>
-	
-    <ul style="margin-top:5px;">
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Co-organizer, International Workshop on Computer Vision for UAVs in ECCV 2020
-				<br>
-			</p>
-		</li>
-		
-    </ul>
-	
-	<HR>
-	
-	<font size="4" color="#034f84"><b>Conference Program Committee / Reviewer for</b></font>
-	<br>
-	
-    <ul style="margin-top:5px;">
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>)</font>, <font size="3">2021</font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				European Conference on Computer Vision (<font style="font-weight:bold">ECCV</font>)</font>, <font size="3">2020</font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				AAAI Conference on Artificial Intelligence (<font style="font-weight:bold">AAAI</font>)</font>, <font size="3">2020, 2021</font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				ICCV 2019 Workshop on Vision Meets Drone (<font style="font-weight:bold">VisDrone2019</font>)</font>, <font size="3">2019</font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE International Conference on Computer Vision (<font style="font-weight:bold">ICCV</font>)</font>, <font size="3">2019</font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE Conference on Computer Vision and Pattern Recognition (<font style="font-weight:bold">CVPR</font>)</font>, <font size="3">2019 (<font style="font-weight:bold" color="#034f84">Outstanding Reviewer</font>), 2020</font>
-				<br>
-			</p>
-		</li>
-		
-    </ul>
 
 </div>
 
