--- a/teaching.html
+++ b/teaching.html
@@ -17,13 +17,29 @@
     <a class="navi" href="./publications.html">Full Publications</a>
     <a class="navi navi_active" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
-	<a class="navi" href="./student.html">Student Supervision</a>
+	<!--<a class="navi" href="./student.html">Student Supervision</a>-->
 </div>
 
 <div class="navi_bar"></div>
 
 <div class="central_body">
-
+	
+	<font size="4" color="#034f84"><b>Department of Computer Science, Stony Brook University</b></font>
+	<br>
+	
+	<ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				CSE 527, Introduction to Computer Vision, Spring 2020.
+				<br>
+			</p>
+		</li>
+		
+    </ul>
+	
+	
+	
 	<font size="4" color="#034f84"><b>Department of Computer and Information Sciences, Temple University</b></font>
 	<br>
 	
