--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
     <a class="navi navi_active" href="./publications.html">Full Publications</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
-	<a class="navi" href="./student.html">Student Supervision</a>
+	<!--<a class="navi" href="./student.html">Student Supervision</a>-->
 </div>
 
 <div class="navi_bar"></div>
