--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="intro">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
             <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PhD student
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PhD candidate
             <br><br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>
             <br>
