--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
 				<br>
+				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_TracKlinic_Diagnosis_of_Challenge_Factors_in_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href=".\projects\TracKlinic\TracKlinic.htm" target="_blank"><font color="#0099ff">project</font></a>
+				<br>
 			</p>
 		</li>
 		
