--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
 				<br>
-				<font>Neural Networks (<b>NN</b>), 2020. (accepted)</font>
+				<font>Neural Networks (<b>NN</b>), 133: 220-228, 2021.</font>
+				<br>
+				<a href="publication\NN-2021.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/ClsGAN" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
