--- a/index.html
+++ b/index.html
@@ -137,6 +137,19 @@ src="personal/at.gif">cs.stonybrook.edu
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Robust and Efficient Graph Correspondence Transfer for Person Re-identification</font>
+				<br>
+				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, Shuang Wu, and Haibin Ling</font>
+				<br>
+				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 30: 1623-1638, 2021.</font>
+				<br>
+				<font><a href="publication\TIP-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a></font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
 				<br>
 				<font color="#000000">Jiaxiang Ren, <b>Heng Fan</b>, Jie Yang, and Haibin Ling</font>
@@ -144,19 +157,6 @@ src="personal/at.gif">cs.stonybrook.edu
 				<font>IEEE Engineering in Medicine and Biology Society  (<b>EMBC</b>), 2020.</font>
 				<br>
 				<a href="publication\EMBC-20.pdf" target="_blank"><font color="#0099ff">paper</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Robust and Efficient Graph Correspondence Transfer for Person Re-identification</font>
-				<br>
-				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, Shuang Wu, and Haibin Ling</font>
-				<br>
-				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 2020. (in press)</font>
-				<br>
-				<font><a href="publication\TIP-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a></font>
 				<br>
 			</p>
 		</li>
