--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ src="personal/at.gif">cs.stonybrook.edu
 				<br>
 				<font color="#000000" ><b>Heng Fan</b>*, Hexin Bai*, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
 				<br>
-				<font>International Journal of Computer Vision (<b>IJCV</b>), 2020. (in press)</font>
+				<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439–461, 2021.</font>
 				<br>
 				<a href="publication\IJCV-21.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
 				<br>
