--- a/publications.html
+++ b/publications.html
@@ -31,37 +31,26 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">ClsGAN: Selective Attribute Editing Based On Classification Adversarial Network</font>
-				<br>
-				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
-				<br>
-				<font>Neural Networks (<b>NN</b>), 2020. (accepted)</font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan*</b>, Hexin Bai*, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
+				<font color="#000000" ><b>Heng Fan</b>*, Hexin Bai*, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
 				<br>
-				<font>International Journal of Computer Vision (<b>IJCV</b>), 2020. (in press)</font>
+				<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439–461, 2021.</font>
 				<br>
 				<a href="publication\IJCV-21.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
 				<br>
 			</p>
 		</li>
-		
+	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Semantic-Aware Label Placement for Augmented Reality in Street View</font>
+				<font style="font-weight:bold">ClsGAN: Selective Attribute Editing Based On Classification Adversarial Network</font>
 				<br>
-				<font color="#000000" >Jianqing Jia, Semir Elezovikj, <b>Heng Fan</b>, Shuojin Yang, Jing Liu, Wei Guo, Chiu C. Tan, and Haibin Ling</font>
+				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
 				<br>
-				<font>The Visual Computer (<b>TVC</b>), 2020. (in press)</font>
+				<font>Neural Networks (<b>NN</b>), 133: 220-228, 2021.</font>
 				<br>
-				<font><a href="https://arxiv.org/abs/1912.07105" target="_blank"><font color="#0099ff">paper</font></a></font>
+				<a href="publication\NN-2021.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/ClsGAN" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
@@ -72,9 +61,22 @@
 				<br>
 				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, Shuang Wu, and Haibin Ling</font>
 				<br>
-				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 2020. (in press)</font>
+				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 30: 1623-1638, 2021.</font>
 				<br>
 				<font><a href="publication\TIP-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a></font>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Semantic-Aware Label Placement for Augmented Reality in Street View</font>
+				<br>
+				<font color="#000000" >Jianqing Jia, Semir Elezovikj, <b>Heng Fan</b>, Shuojin Yang, Jing Liu, Wei Guo, Chiu C. Tan, and Haibin Ling</font>
+				<br>
+				<font>The Visual Computer (<b>TVC</b>), 2021. (in press)</font>
+				<br>
+				<font><a href="https://arxiv.org/abs/1912.07105" target="_blank"><font color="#0099ff">paper</font></a></font>
 				<br>
 			</p>
 		</li>
@@ -184,6 +186,8 @@
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
 				<br>
+				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_TracKlinic_Diagnosis_of_Challenge_Factors_in_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href=".\projects\TracKlinic\TracKlinic.htm" target="_blank"><font color="#0099ff">project</font></a>
+				<br>
 			</p>
 		</li>
 		
@@ -194,6 +198,8 @@
 				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
+				<br>
+				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_MART_Motion-Aware_Recurrent_Neural_Network_for_Robust_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
 				<br>
 			</p>
 		</li>
