--- a/teaching.html
+++ b/teaching.html
@@ -31,6 +31,13 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				CSE 527, Introduction to Computer Vision, Spring 2021.
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				CSE 527, Introduction to Computer Vision, Spring 2020.
 				<br>
 			</p>
