--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ src="personal/at.gif">cs.stonybrook.edu
 			[<a href="https://www.researchgate.net/profile/Heng_Fan2" target="https://www.researchgate.net/profile/Heng_Fan2"><font color="#0099ff">ResearchGate</font></a>]
         </div>
     </div>
+	<font size="4" color="red"><b>I will be joining the University of North Texas (UNT) as an assistant professor in Fall 2020.</b></font>
 	
 	<HR>
 	
@@ -62,6 +63,10 @@ src="personal/at.gif">cs.stonybrook.edu
 	
 	<HR>
 	-->
+	<font size="4" color="red"><b>To prospective students:</b></font> <font size="4">I am looking for multiple self-motivated Ph.D. students to work on challenging problems (e.g., tracking, detection, segmentation, etc.) 
+	in computer vision. Please send me your CV and transcripts if you are interested. Motivated master and undergraduate students within UNT are also welcome.</font>
+	<HR>
+	
 	
 	<font size="4" color="#034f84"><b>News</b></font>
     <ul style="margin-top:5px;">
@@ -76,260 +81,19 @@ src="personal/at.gif">cs.stonybrook.edu
 	
 	<HR>
 	
-	<font size="4" color="#034f84"><b>Selected Publications</b></font> <font size="3"> 
-	<br>
-	For all papers, go to <a href="./publications.html"><font color="#0099ff">full publications</font></a> or <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">gScholar</font></a></font>
-	<br>
-	
-    <ul style="margin-top:5px;">
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">TracKlinic: Diagnosis of Challenge Factors in Visual Tracking</font>
-				<br>
-				<font color="#000000"><b>Heng Fan</b>, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan and Haibin Ling</font>
-				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
-				<br>
-				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_TracKlinic_Diagnosis_of_Challenge_Factors_in_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href=".\projects\TracKlinic\TracKlinic.htm" target="_blank"><font color="#0099ff">project</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">MART: Motion-Aware Recurrent Neural Network for Robust Visual Tracking</font>
-				<br>
-				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
-				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
-				<br>
-				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_MART_Motion-Aware_Recurrent_Neural_Network_for_Robust_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">ClsGAN: Selective Attribute Editing Based On Classification Adversarial Network</font>
-				<br>
-				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
-				<br>
-				<font>Neural Networks (<b>NN</b>), 133: 220-228, 2021.</font>
-				<br>
-				<a href="publication\NN-2021.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/ClsGAN" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b>*, Hexin Bai*, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
-				<br>
-				<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439–461, 2021.</font>
-				<br>
-				<a href="publication\IJCV-21.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Robust and Efficient Graph Correspondence Transfer for Person Re-identification</font>
-				<br>
-				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, Shuang Wu, and Haibin Ling</font>
-				<br>
-				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 30: 1623-1638, 2021.</font>
-				<br>
-				<font><a href="publication\TIP-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a></font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
-				<br>
-				<font color="#000000">Jiaxiang Ren, <b>Heng Fan</b>, Jie Yang, and Haibin Ling</font>
-				<br>
-				<font>IEEE Engineering in Medicine and Biology Society  (<b>EMBC</b>), 2020.</font>
-				<br>
-				<a href="publication\EMBC-20.pdf" target="_blank"><font color="#0099ff">paper</font></a>
-				<br>
-			</p>
-		</li>
-	
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Parallel Tracking and Verifying</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
-				<br>
-				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 28(8): 4130-4144, 2019.</font>
-				<br>
-				<font><a href="publication\TIP-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://www3.cs.stonybrook.edu/~hling/code/PTAV/ptav.htm" target="_blank"><font color="#0099ff">code</font></a></font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Clustered Object Detection in Aerial Images</font>
-				<br>
-				<font color="#000000" >Fan Yang, <b>Heng Fan</b>, Peng Chu, Erik Blasch, and Haibin Ling</font>
-				<br>
-				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019.</font>
-				<br>
-				<a href="publication\ICCV-19.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1IrrU937Vdki4ibN6lAAi7FQ-yx4CWjJw/view" target="_blank"><font color="#0099ff">supplementary</font></a> &nbsp; <a href="https://github.com/fyangneil/Clustered-Object-Detection-in-Aerial-Image" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Siamese Cascaded Region Proposal Networks for Real-Time Visual Tracking</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
-				<br>
-				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019.</font>
-				<br>
-				<a href="publication\CVPR-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://www3.cs.stonybrook.edu/~hling/code/CRPN/crpn.htm" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">LaSOT: A High-quality Benchmark for Large-scale Single Object Tracking</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b>*, Liting Lin*, Fan Yang*, Peng Chu*, Ge Deng, Sijia Yu, Hexin Bai, Yong Xu, Chunyuan Liao, and Haibin Ling</font>
-				<br>
-				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019.</font>
-				<br>
-				<a href="publication\CVPR-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Scene Parsing via Dense Recurrent Neural Networks with Attentional Selection</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Peng Chu, Longin Jan Latecki, and Haibin Ling</font>
-				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
-				<br>
-				<a href="publication\WACV-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Online Multi-Object Tracking with Instance-Aware Tracker and Dynamic Model Refreshment</font>
-				<br>
-				<font color="#000000" >Peng Chu, <b>Heng Fan</b>, Chiu C. Tan, and Haibin Ling</font>
-				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
-				<br>
-				<a href="publication\WACV-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Multi-level Contextual RNNs with Attention Model for Scene Labeling</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Xue Mei, Danil Prokhorov, and Haibin Ling</font>
-				<br>
-				<font>IEEE Transactions on Intelligent Transportation Systems (<b>T-ITS</b>), 19(11): 3475-3485, 2018.</font>
-				<br>
-				<font><a href="publication\TITS-18.pdf" target="_blank"><font color="#0099ff">paper</font></a></font>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Graph Correspondence Transfer for Person Re-identification</font>
-				<br>
-				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Shibao Zheng, Hang Su, Xinzhe Li, Shuang Wu, and Haibin Ling</font>
-				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> (<font color="#CC0000"><b>Oral</b></font>)
-				<br>
-				<a href="publication\AAAI-18.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Parallel Tracking and Verifying: A Framework for Real-Time and High Accuracy Visual Tracking</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
-				<br>
-				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2017.</font>
-				<br>
-				<a href="publication\ICCV-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="publication\ICCV17-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="publication\ICCV17-slide.pdf" target="_blank"><font color="#0099ff">slide</font></a> &nbsp; <a href="https://www3.cs.stonybrook.edu/~hling/code/PTAV/ptav.htm" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Robust Visual Tracking via Local-Global Correlation Filter</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
-				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
-				<br>
-				<a href="publication\AAAI-17.pdf" target="_blank"><font color="#0099ff">paper</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">SANet: Structure-Aware Network for Visual Tracking</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
-				<br>
-				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
-				<br>
-				<a href="publication\CVPRW-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://www.dabi.temple.edu/~hbling/code/SANet/SANet.html" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Robust Visual Tracking with Multitask Joint Dictionary Learning</font>
-				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
-				<br>
-				<font>IEEE Transactions on Circuits and Systems for Video and Technology (<b>T-CSVT</b>), 27(5): 1018-1030, 2017.</font>
-				<br>
-				<font><a href="publication\TCSVT-17.pdf" target="_blank"><font color="#0099ff">paper</font></a></font> &nbsp; <a href=".\projects\MJDL\MJDL.htm" target="_blank"><font color="#0099ff">project</font></a>
-				<br>
-			</p>
-		</li>
-		
-    </ul>
-	
+	<font size="4" color="#034f84"><b>Quick links</b></font> <font size="3"> 
+		<br>
+		&nbsp; &nbsp; &nbsp;
+		<a href="https://portal.unt.edu/psp/ps/EMPLOYEE/EMPL/h/?tab=SYPA_GUEST" target="_blank"><font color="#0099ff" style="line-height: 150%;">UNT System</font></a> &nbsp;   
+		<a href="https://computerscience.engineering.unt.edu/" target="_blank"><font color="#0099ff">UNT CSE</font></a>   &nbsp; 
+		<a href="https://www.google.com/" target="_blank"><font color="#0099ff">Google</font></a>     &nbsp; 
+		<a href="https://scholar.google.com/" target="_blank"><font color="#0099ff">gScholar</font></a>   &nbsp; 
+		<a href="http://maps.google.com/" target="_blank"><font color="#0099ff">gMap</font></a>   &nbsp; 
+		<a href="https://www.thecvf.com/" target="_blank"><font color="#0099ff">CVF</font></a>   &nbsp; 
+		<a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank"><font color="#0099ff">IEEE</font></a>
 	
 	<HR>
 	
-	<font size="4" color="#034f84"><b>Selected Honors and Awards</b></font>
-    <ul style="margin-top:5px;">
-		<li><font style="line-height: 120%">CVPR 2019 Outstanding Reviewer Award, 2019</font></li>
-		<li><font style="line-height: 120%">National Scholarship for Graduate, 2015</font></li>
-		<li><font style="line-height: 120%">Honorable Mention in Mathematical Contest in Modeling (USA), 2012</font></li>
-		<li><font style="line-height: 120%">National Motivation Scholarship for Undergraduate, 2012</font></li>
-		<li><font style="line-height: 120%">National Scholarship for Undergraduate, 2011</font></li>
-    </ul>
 	
 </div>
 
