--- a/service.html
+++ b/service.html
@@ -148,6 +148,13 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				ACM Computing Surveys  (<font style="font-weight:bold">CUSR</font>)
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				The Visual Computer  (<font style="font-weight:bold">TVC</font>)
 				<br>
 			</p>
